tests/machine/x/pl/exists_builtin.pl
% Generated by Mochi compiler v0.10.26 on 2025-07-16T17:40:32Z
:- style_check(-singleton).
:- initialization(main, main).
main :-
    Data = [1, 2],
    (once((member(X, Data), (X =:= 1))) -> Flag = true ; Flag = false),
    _V0 is Flag,
    writeln(_V0),
    true.
